# LuminaIQ

./: .gitignore  AGENTS.md  AZURE_MIGRATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  LUMINAIQ_COMPLETE_DOCUMENTATION.md  LuminaIQ.bat  README.md  deploy_azure.bat  deploy_azure.ps1  render.yaml
.kiro/specs/high-performance-backend-refactoring/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  CACHE_WARMING_IMPLEMENTATION.md  Dockerfile  README.md  TASK_13.4_IMPLEMENTATION_SUMMARY.md  TASK_13.5_IMPLEMENTATION_SUMMARY.md  dep-tree.txt  fix_db_calls.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  startup.sh  supabase_schema_flashcards_mindmaps.sql  test.py
backend/api/: deps.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: auth.py  chat.py  documents.py  evaluation.py  flashcards.py  jobs.py  knowledge_graph.py  learning.py  mcq.py  mindmaps.py  notes.py  progress.py  user_data.py
backend/config/: settings.py
backend/core/: __init__.py  celery_app.py  health_check.py  job_manager.py  lock_manager.py  rate_limiter.py  redis_manager.py  semantic_cache.py  session_manager.py  telemetry.py  vector_cache.py
backend/db/: client.py  gamification_schema.sql  telemetry_wrapper.py
backend/db/migrations/: 001_gamification_table.sql  002_bookmarks_highlights.sql
backend/docs/: DEPENDENCY_TELEMETRY.md  SESSION_MIGRATION_IMPLEMENTATION.md  STRUCTURED_LOGGING.md  session_affinity.md  session_affinity_example.env
backend/middleware/: __init__.py  correlation_id.py  rate_limit.py  telemetry.py
backend/migrations/: 006_add_activity_columns.sql
backend/models/: schemas.py
backend/services/: auth_service.py  book_service.py  document_service.py  embedding_service.py  evaluation_service.py  flashcard_service.py  gamification_service.py  graph_analytics_service.py  knowledge_graph_service.py  learning_service.py  llm_service.py  mcq_service.py  mindmap_service.py  notes_service.py  project_service.py  qdrant_service.py  rag_service.py  user_data_service.py
backend/tasks/: __init__.py  document_tasks.py  knowledge_graph_tasks.py  maintenance_tasks.py  notes_tasks.py
backend/tests/: MIGRATION_SUMMARY.md  README.md  __init__.py  conftest.py
backend/tests/integration/: test_cache_warming.py  test_custom_metrics_integration.py  test_exception_handler.py  test_health_endpoints.py  test_redis_integration.py  test_signed_url.py
backend/tests/unit/: test_background_tasks.py  test_connection_pooling.py  test_correlation_id_middleware.py  test_correlation_id_propagation.py  test_custom_metrics.py  test_dependency_telemetry.py  test_job_manager.py  test_lock_manager.py  test_rate_limiter.py  test_redis_manager.py  test_structured_logger.py  test_telemetry_middleware.py
backend/utils/: adaptive_rate_limiter.py  azure_ocr_service.py  background_jobs.py  cache.py  cache_warming.py  dsa_utils.py  embedding_queue.py  file_parser.py  general_limiter.py  logger.py  performance.py  progress_manager.py  rate_limiter.py
frontend/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json
frontend/.vercel/: project.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AITutorChat.jsx  AddDocumentModal.jsx  BookmarksPanel.jsx  DevLogViewer.jsx  ErrorBoundary.jsx  GamificationPanel.jsx  GlobalSearch.jsx  PomodoroTimer.jsx
frontend/src/components/chat/: ChatCommands.jsx  PDFViewer.jsx  ToolResultCard.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  ThemeToggle.jsx
frontend/src/components/views/: AdvancedAnalytics.jsx  ExamPrepMode.jsx  FlashcardsView.jsx  KnowledgeGraphView.jsx  LearningPathView.jsx  MindmapView.jsx  NotesView.jsx  QAView.jsx  QuizView.jsx  StudyDashboard.jsx  TopicFlashcards.jsx  TopicMindmap.jsx
frontend/src/context/: AuthContext.jsx  GamificationContext.jsx  SettingsContext.jsx  ToastContext.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  ProjectView.jsx  Settings.jsx
frontend/src/utils/: fileLogger.js  logger.js  studyActivity.js
pdfprocess/: README.md
