[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.12.3",
    "black==25.11.0",
    "celery[redis]==5.4.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dataclasses-json==0.6.7",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "eval-type-backport==0.2.2",
    "fastapi==0.115.0",
    "filelock==3.20.0",
    "frozenlist==1.8.0",
    "gotrue==2.9.1",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "gunicorn==21.2.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hiredis==2.3.2",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.27.0",
    "httpx-sse==0.4.3",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-core==0.3.80",
    "langchain-openai==0.3.35",
    "langchain-qdrant==0.2.1",
    "langchain-text-splitters==0.3.11",
    "langchain-together==0.3.1",
    "langsmith==0.4.55",
    "loguru==0.7.2",
    "lxml==6.0.2",
    "markdown==3.5.2",
    "markdown-it-py==4.0.0",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "numpy==2.3.5",
    "openai==2.9.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-instrumentation>=0.61b0",
    "opentelemetry-instrumentation-asgi>=0.61b0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-redis>=0.61b0",
    "opentelemetry-proto>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-semantic-conventions>=0.61b0",
    "opentelemetry-util-http>=0.61b0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pdf2image>=1.17.0",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "portalocker==2.10.1",
    "postgrest==2.24.0",
    "propcache==0.4.1",
    "protobuf==6.33.1",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymupdf==1.26.6",
    "pymupdf4llm==0.2.5",
    "pypdf2==3.0.1",
    "pytesseract>=0.3.10",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.0",
    "python-dotenv==1.0.0",
    "python-jose==3.5.0",
    "python-multipart==0.0.9",
    "pytokens==0.3.0",
    "pyyaml==6.0.3",
    "qdrant-client==1.16.1",
    "realtime==2.24.0",
    "redis==5.0.1",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "sseclient-py==1.8.0",
    "starlette==0.38.6",
    "storage3==2.24.0",
    "strenum==0.4.15",
    "supabase==2.24.0",
    "supabase-auth==2.24.0",
    "supabase-functions==2.24.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "together==0.2.11",
    "tqdm==4.67.1",
    "typer==0.9.4",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==1.26.20",
    "uuid-utils==0.12.0",
    "uvicorn==0.27.0",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
